<resources>
    <string name="app_name">dwMap</string>
    <string name="login_tip">  Please login with dwMap，if null register at dynamic.watch！</string>
    <string name="prompt_email">Account</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_log_out">Exit</string>
    <string name="tip_link_watch">Please input the Second line that contain 9 charactors：</string>
    <string name="action_link_watch">Link Watch</string>
    <string name="tip_upload_title">Sure to upload this file?</string>
    <string name="tip_upload_Msg1">You will upload the file\n"</string>
    <string name="tip_upload_Msg2">",\n click Upload will upload to dwMap。</string>

    <string name="tip_setdefault_title">Set to Watch Path</string>
    <string name="tip_setdefault_Msg1">You will set\n"</string>
    <string name="tip_setdefault_Msg2">",\n to the path that your watch can sync。</string>

    <string name="action_cancel">Cancle</string>
    <string name="action_upload">Upload</string>
    <string name="action_sure">Sure</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>


    <string name="tip_success">Successed.</string>
    <string name="tip_fail">Failed.</string>
    <string name="tip_setting">Setting...</string>
    <string name="tip_uploading">Uploading...</string>

    <string name="title_switch">Distance unit</string>


    <string name="distance_miles">Miles</string>
    <string name="distance_km">Km</string>

    <string name="line_account">Account:</string>

    <string name="drawer_header">Local</string>
    <string name="drawer_create_path">New</string>
    <string name="drawer_all_path">All Path</string>
    <string name="drawer_link_watch">Link Watch</string>
    <string name="drawer_set">Settings</string>
    <string name="drawer_all_local">Gpx files</string>
    <string name="drawer_help">Help</string>
    <string name="drawer_about">About</string>


    <string name="link_watch_last_step">Link watch seccessed！\nYou should press "up" buttom on the watch</string>
    <string name="link_watch_already_linked">The watch has already linked，if your watch app is link code，please Exit it and try again</string>
    <string name="link_watch_time_exceeded">Link exceeded！Prease exit the watch dwMap，then enter again</string>
    <string name="link_watch_failed">Failed！\nYou can go to pre-step to continue.</string>
</resources>
